# photon_weave

./: .flake8  .gitignore  .readthedocs.yaml  ARCHITECTURE_AND_TYPING.md  BRANCH_CHANGELOG.md  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  setup.py  tox.ini
.github/workflows/: draft-pdf.yml  pypi.yaml  tests.yml
JOSS2024/: paper.md
benchmarks/: README.md  benchmark.py  contraction_vs_jitted.py
benchmarks/lossy_circuit/: array_memory_usage_tracker.py  lc_photon_weave.py  lc_qiskit.py  lc_qutip.py  lossy_circuit.py
benchmarks/state_management/: pw_performance_test.py  state_management_benchmark.py  state_management_photon_weave.py  state_management_qiskit.py  state_management_qutip.py
docs/: API.rst  api.rst  architecture_and_typing.md  benchmarks.rst  branch_changelog.md  change_summary.md  changelog.md  code_of_conduct.rst  conf.py  contributing.rst  index.rst  intro.rst  photon_weave.constants.rst  photon_weave.core.rst  photon_weave.extra.rst  photon_weave.operation.helpers.rst  photon_weave.operation.rst  photon_weave.rst  photon_weave.state.rst  photon_weave.state.utils.rst  requirements.txt  update_notes.md
docs/examples/: index.rst  jaynes_cummings_model.rst  reusable_devices.rst  super_dense_coding.rst  time_bin_encoding.rst
docs/source/: conf.py  index.rst
examples/: README.md  jaynes_cummings_model.py  mach_zehnder_interferometer.py  quantum_feature_classifier.py  super_dense_coding.py  time_bin_encoding.py  time_bin_qubit.py
examples/interoperable_devices/: dense_decoder.py  dense_encoder.py  entangled_photon_source.py  envelope_buffer.py
paper/: paper.bib  paper.md
photon_weave/: __init__.py  mypy.ini  photon_weave.py
photon_weave/_math/: __init__.py  ops.py
photon_weave/constants/: __init__.py
photon_weave/core/: __init__.py  adapters.py  ir.py  jitted.py  kernels.py  linear.py  meta.py  ops.py  rng.py
photon_weave/extra/: __init__.py  (+2 more)
tests/: conftest.py  test_session.py
(+56 files in other folders)
