[tool.poetry]
name = "photon_weave"
version = "0.2.0"
description = "A quantum optics simulator for modeling and analysis of quantum systems."
authors = ["Simon Sekavčnik, Kareem H. El-Safty, Janis Nötzel"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tqsd/photon_weave"
repository = "https://github.com/tqsd/photon_weave"
keywords = ["quantum optics", "simulation", "quantum mechanics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
jax = "^0.8.1"
jaxlib = "^0.8.1"
# Add other dependencies as required

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
coverage = "^7.6"
coverage-badge = "^1.1"
tox = "^4.18"
sphinx = "^7.4"
sphinx-rtd-theme = ">=1.3"
myst-parser = "^2.0"
sphinx-autodoc-typehints = "^2.2"
tomli = "^2.0"
python-semantic-release = "^9.0.0"
packaging = ">=24.2"
# Add other development dependencies as required

[tool.poetry.extras]
dev = [
    "pytest",
    "coverage",
    "coverage-badge",
    "tox",
    "sphinx",
    "sphinx-rtd-theme",
    "python-semantic-release",
    "packaging",
]

[tool.semantic_release]
branch = "master"
version_toml = ["pyproject.toml:tool.poetry.version"]
tag_format = "{version}"
build_command = "poetry build"
upload_to_repository = true
upload_to_release = true
repository = "pypi"
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
